[package]
name = "pffthash-mint"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pffthash-mint"
path = "src/main.rs"

[dependencies]
alloy = { version = "0.9", features = ["full"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rand = "0.8"
sha3 = "0.10"
hex = "0.4"
dotenv = "0.15"
